--- a/pbd/pipelines/ocr_engine/configs/config.json
+++ b/pbd/pipelines/ocr_engine/configs/config.json
@@ -3,7 +3,8 @@
   "bucket" : "data-bucket",
   "ocr_model_path" : "/models/olmOCR-7B-0725-FP8",
   "ocr_params" : {
-    "max_tokens" : 16384
+    "max_tokens" : 16384,
+    "temperature" : 0.1
   },
   "ocr_model_batch_size" : 20,
   "run_test" : false
