--- a/pbd/pipelines/ocr_engine/pyproject.toml
+++ b/pbd/pipelines/ocr_engine/pyproject.toml
@@ -3,7 +3,7 @@ name = "ocr-engine"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = "==3.10.*"
 dependencies = [
     "accelerate>=1.7.0",
     "bitsandbytes>=0.46.0",
