--- a/pbd/pipelines/ocr_engine/pyproject.toml
+++ b/pbd/pipelines/ocr_engine/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "metaflow==2.15.21",
     "minio>=7.2.15",
     "pillow>=11.2.1",
+    "pymupdf>=1.26.3",
     "s3fs>=0.4.2",
     "slack-sdk>=3.35.0",
     "transformers>=4.52.4",
