--- a/pbd/pipelines/ocr_engine/pyproject.toml
+++ b/pbd/pipelines/ocr_engine/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
     "pymupdf>=1.26.3",
     "s3fs>=0.4.2",
     "slack-sdk>=3.35.0",
-    "transformers>=4.52.4",
+    "transformers<4.54.0",
     "vllm==0.9.0.1",
 ]
 
