--- a/pbd/pipelines/ocr_post_process/configs/config.json
+++ b/pbd/pipelines/ocr_post_process/configs/config.json
@@ -1,11 +1,12 @@
 {
   "minio_endpoint" : "minio-palebluedot.io",
-  "post_processing_model_path" : "/models/Qwen3-4B-unsloth-bnb-4bit",
+  "post_processing_model_path" : "/models/Qwen3-8B-unsloth-bnb-4bit",
+  "max_model_len" : 16384,
   "post_processing_params" : {
     "temperature" : 0.7,
     "top_p" : 0.8,
     "top_k": 20,
-    "max_tokens" : 50000
+    "max_tokens" : 4096
   },
   "post_processing_batch_size" : 10,
   "run_test" : false
