--- a/pbd/pipelines/ocr_engine/requirements.txt
+++ b/pbd/pipelines/ocr_engine/requirements.txt
@@ -10,8 +10,6 @@ aiohttp==3.12.14
     #   vllm
 aiosignal==1.4.0
     # via aiohttp
-airportsdata==20250706
-    # via outlines
 annotated-types==0.7.0
     # via pydantic
 anyio==4.9.0
@@ -67,6 +65,8 @@ cachetools==6.1.0
     # via
     #   google-auth
     #   vllm
+cbor2==5.6.5
+    # via vllm
 certifi==2025.7.14
     # via
     #   httpcore
@@ -79,6 +79,7 @@ cffi==1.17.1
     # via
     #   argon2-cffi-bindings
     #   pyzmq
+    #   soundfile
 charset-normalizer==3.4.2
     # via requests
 click==8.2.1
@@ -88,9 +89,7 @@ click==8.2.1
     #   typer
     #   uvicorn
 cloudpickle==3.1.1
-    # via
-    #   outlines
-    #   vllm
+    # via vllm
 colorama==0.4.6 ; sys_platform == 'win32'
     # via
     #   click
@@ -99,7 +98,7 @@ colorama==0.4.6 ; sys_platform == 'win32'
     #   uvicorn
 comm==0.2.3
     # via ipykernel
-compressed-tensors==0.9.4
+compressed-tensors==0.10.2
     # via vllm
 contourpy==1.3.2
     # via matplotlib
@@ -115,7 +114,7 @@ decorator==5.2.1
     # via ipython
 defusedxml==0.7.1
     # via nbconvert
-depyf==0.18.0
+depyf==0.19.0
     # via vllm
 dill==0.3.8
     # via
@@ -123,7 +122,7 @@ dill==0.3.8
     #   depyf
     #   multiprocess
 diskcache==5.6.3
-    # via outlines
+    # via vllm
 distro==1.9.0
     # via openai
 dnspython==2.7.0
@@ -178,12 +177,6 @@ gguf==0.17.1
     # via vllm
 google-auth==1.6.3
     # via kubernetes
-googleapis-common-protos==1.70.0
-    # via
-    #   opentelemetry-exporter-otlp-proto-grpc
-    #   opentelemetry-exporter-otlp-proto-http
-grpcio==1.74.0
-    # via opentelemetry-exporter-otlp-proto-grpc
 h11==0.16.0
     # via
     #   httpcore
@@ -215,13 +208,8 @@ idna==3.10
     #   jsonschema
     #   requests
     #   yarl
-importlib-metadata==8.7.0
-    # via opentelemetry-api
 interegular==0.3.3
-    # via
-    #   lm-format-enforcer
-    #   outlines
-    #   outlines-core
+    # via lm-format-enforcer
 ipykernel==6.30.0
     # via jupyterlab
 ipython==8.37.0
@@ -236,8 +224,8 @@ jinja2==3.1.6
     #   jupyter-server
     #   jupyterlab
     #   jupyterlab-server
+    #   mlx-lm
     #   nbconvert
-    #   outlines
     #   torch
 jiter==0.10.0
     # via openai
@@ -257,8 +245,6 @@ jsonschema==4.25.0
     #   jupyterlab-server
     #   mistral-common
     #   nbformat
-    #   outlines
-    #   outlines-core
     #   ray
 jsonschema-specifications==2025.4.1
     # via jsonschema
@@ -299,7 +285,6 @@ kubernetes==33.1.0
     # via ocr-engine
 lark==1.2.2
     # via
-    #   outlines
     #   rfc3987-syntax
     #   vllm
 llguidance==0.7.30 ; platform_machine == 'aarch64' or platform_machine == 'arm64' or platform_machine == 'x86_64'
@@ -330,6 +315,12 @@ mistral-common==1.8.3
     # via vllm
 mistune==3.1.3
     # via nbconvert
+mlx==0.28.0 ; platform_machine == 'arm64' and sys_platform == 'darwin'
+    # via mlx-lm
+mlx-lm==0.26.3 ; platform_machine == 'arm64' and sys_platform == 'darwin'
+    # via xgrammar
+mlx-metal==0.28.0 ; platform_machine == 'arm64' and sys_platform == 'darwin'
+    # via mlx
 mpmath==1.3.0
     # via sympy
 msgpack==1.1.1
@@ -352,9 +343,7 @@ nbformat==5.10.4
     #   nbclient
     #   nbconvert
 nest-asyncio==1.6.0
-    # via
-    #   ipykernel
-    #   outlines
+    # via ipykernel
 networkx==3.4.2
     # via torch
 ninja==1.11.1.4
@@ -375,11 +364,13 @@ numpy==2.2.6
     #   gguf
     #   matplotlib
     #   mistral-common
+    #   mlx-lm
     #   numba
     #   opencv-python-headless
-    #   outlines
     #   pandas
     #   scipy
+    #   soundfile
+    #   soxr
     #   torchvision
     #   transformers
     #   vllm
@@ -425,47 +416,14 @@ oauthlib==3.3.1
     # via
     #   kubernetes
     #   requests-oauthlib
-openai==1.97.1
+openai==1.90.0
     # via vllm
 opencv-python-headless==4.12.0.88
     # via
     #   mistral-common
     #   vllm
-opentelemetry-api==1.35.0
-    # via
-    #   opentelemetry-exporter-otlp-proto-grpc
-    #   opentelemetry-exporter-otlp-proto-http
-    #   opentelemetry-sdk
-    #   opentelemetry-semantic-conventions
-    #   vllm
-opentelemetry-exporter-otlp==1.35.0
+outlines-core==0.2.10
     # via vllm
-opentelemetry-exporter-otlp-proto-common==1.35.0
-    # via
-    #   opentelemetry-exporter-otlp-proto-grpc
-    #   opentelemetry-exporter-otlp-proto-http
-opentelemetry-exporter-otlp-proto-grpc==1.35.0
-    # via opentelemetry-exporter-otlp
-opentelemetry-exporter-otlp-proto-http==1.35.0
-    # via opentelemetry-exporter-otlp
-opentelemetry-proto==1.35.0
-    # via
-    #   opentelemetry-exporter-otlp-proto-common
-    #   opentelemetry-exporter-otlp-proto-grpc
-    #   opentelemetry-exporter-otlp-proto-http
-opentelemetry-sdk==1.35.0
-    # via
-    #   opentelemetry-exporter-otlp-proto-grpc
-    #   opentelemetry-exporter-otlp-proto-http
-    #   vllm
-opentelemetry-semantic-conventions==0.56b0
-    # via opentelemetry-sdk
-opentelemetry-semantic-conventions-ai==0.4.12
-    # via vllm
-outlines==0.1.11
-    # via vllm
-outlines-core==0.1.26
-    # via outlines
 overrides==7.7.0
     # via jupyter-server
 packaging==25.0
@@ -517,8 +475,7 @@ propcache==0.3.2
     #   yarl
 protobuf==6.31.1
     # via
-    #   googleapis-common-protos
-    #   opentelemetry-proto
+    #   mlx-lm
     #   ray
     #   vllm
 psutil==7.0.0
@@ -542,10 +499,10 @@ pyasn1==0.6.1
     #   rsa
 pyasn1-modules==0.4.2
     # via google-auth
+pybase64==1.4.2
+    # via vllm
 pycountry==24.6.1
-    # via
-    #   outlines
-    #   pydantic-extra-types
+    # via pydantic-extra-types
 pycparser==2.22
     # via cffi
 pycryptodome==3.23.0
@@ -558,7 +515,6 @@ pydantic==2.11.7
     #   lm-format-enforcer
     #   mistral-common
     #   openai
-    #   outlines
     #   pydantic-extra-types
     #   vllm
     #   xgrammar
@@ -609,6 +565,7 @@ pyyaml==6.0.2
     #   jupyter-events
     #   kubernetes
     #   lm-format-enforcer
+    #   mlx-lm
     #   ray
     #   transformers
     #   uvicorn
@@ -626,7 +583,6 @@ referencing==0.36.2
     #   jsonschema
     #   jsonschema-specifications
     #   jupyter-events
-    #   outlines
 regex==2024.11.6
     # via
     #   tiktoken
@@ -640,8 +596,6 @@ requests==2.32.4
     #   kubernetes
     #   metaflow
     #   mistral-common
-    #   opentelemetry-exporter-otlp-proto-http
-    #   outlines
     #   ray
     #   requests-oauthlib
     #   tiktoken
@@ -691,7 +645,6 @@ sentencepiece==0.2.0
     # via
     #   mistral-common
     #   vllm
-    #   xgrammar
 sentry-sdk==2.33.2
     # via fastapi-cloud-cli
 setuptools==80.9.0
@@ -712,8 +665,12 @@ sniffio==1.3.1
     # via
     #   anyio
     #   openai
+soundfile==0.13.1
+    # via mistral-common
 soupsieve==2.7
     # via beautifulsoup4
+soxr==0.5.0.post1
+    # via mistral-common
 stack-data==0.6.3
     # via ipython
 starlette==0.47.2
@@ -730,7 +687,6 @@ tiktoken==0.9.0
     # via
     #   mistral-common
     #   vllm
-    #   xgrammar
 tinycss2==1.4.0
     # via bleach
 tokenizers==0.21.4
@@ -739,20 +695,19 @@ tokenizers==0.21.4
     #   vllm
 tomli==2.2.1
     # via jupyterlab
-torch==2.7.0
+torch==2.7.1
     # via
     #   accelerate
     #   bitsandbytes
     #   compressed-tensors
-    #   outlines
     #   torchaudio
     #   torchvision
     #   vllm
     #   xformers
     #   xgrammar
-torchaudio==2.7.0
+torchaudio==2.7.1
     # via vllm
-torchvision==0.22.0
+torchvision==0.22.1
     # via vllm
 tornado==6.5.1
     # via
@@ -767,7 +722,6 @@ tqdm==4.67.1
     #   gguf
     #   huggingface-hub
     #   openai
-    #   outlines
     #   transformers
     #   vllm
 traitlets==5.14.3
@@ -786,10 +740,11 @@ traitlets==5.14.3
 transformers==4.53.3
     # via
     #   compressed-tensors
+    #   mlx-lm
     #   ocr-engine
     #   vllm
     #   xgrammar
-triton==3.3.0 ; platform_machine == 'x86_64' and sys_platform == 'linux'
+triton==3.3.1 ; platform_machine == 'x86_64' and sys_platform == 'linux'
     # via
     #   torch
     #   xgrammar
@@ -814,12 +769,6 @@ typing-extensions==4.14.1
     #   mistune
     #   multidict
     #   openai
-    #   opentelemetry-api
-    #   opentelemetry-exporter-otlp-proto-grpc
-    #   opentelemetry-exporter-otlp-proto-http
-    #   opentelemetry-sdk
-    #   opentelemetry-semantic-conventions
-    #   outlines
     #   pydantic
     #   pydantic-core
     #   pydantic-extra-types
@@ -851,7 +800,7 @@ uvicorn==0.35.0
     #   fastapi-cloud-cli
 uvloop==0.21.0 ; platform_python_implementation != 'PyPy' and sys_platform != 'cygwin' and sys_platform != 'win32'
     # via uvicorn
-vllm==0.9.0.1
+vllm==0.10.0
     # via ocr-engine
 watchfiles==1.1.0
     # via
@@ -871,13 +820,11 @@ websocket-client==1.8.0
     #   kubernetes
 websockets==15.0.1
     # via uvicorn
-xformers==0.0.30 ; platform_machine == 'x86_64' and sys_platform == 'linux'
+xformers==0.0.31 ; platform_machine == 'x86_64' and sys_platform == 'linux'
     # via vllm
-xgrammar==0.1.19 ; platform_machine == 'aarch64' or platform_machine == 'x86_64'
+xgrammar==0.1.21 ; platform_machine == 'aarch64' or platform_machine == 'arm64' or platform_machine == 'x86_64'
     # via vllm
 xxhash==3.5.0
     # via datasets
 yarl==1.20.1
     # via aiohttp
-zipp==3.23.0
-    # via importlib-metadata
