--- a/infrastructure/6_orchestrator/Pulumi.yaml
+++ b/infrastructure/6_orchestrator/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: metaflow
+name: zenml
 runtime: python
-description: Pulumi program to deploy Metaflow orchestrator on Kubernetes
+description: Pulumi program to deploy zenml orchestrator on Kubernetes
