--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,11 @@ dependencies = [
  "omegaconf>=2.3.0",
  "ruff>=0.12.5",
  "copier>=9.8.0",
+ "zenml==0.91.0",
+ "slack>=0.0.2",
+ "s3fs>=2025.10.0",
+ "slack-sdk>=3.38.0",
+ "kubernetes>=34.1.0",
 ]
 
 [project.scripts]
