--- a/pbd/pipelines/pretrain/pyproject.toml
+++ b/pbd/pipelines/pretrain/pyproject.toml
@@ -5,7 +5,16 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "accelerate>=1.12.0",
     "datasets>=4.4.1",
+    "pydantic>=2.11.9",
     "transformers>=4.57.2",
+    "wandb>=0.23.0",
+]
+
+[dependency-groups]
+dev = [
+    "accelerate>=1.12.0",
+]
+test = [
+    "trl>=0.25.1",
 ]
